--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,55 @@
+* {
+	-webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+html {height: 100%;}
+
+body {
+	background-image: url(../img/leaves.jpg);
+	background-size: cover;
+	background-position: center;
+	height: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+#counter-value {
+	min-width: 150px;
+	height: 75px;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#minus:hover, #plus:hover, #reset:hover {cursor: pointer;}
+
+/* ----- responsiveness ----- */
+@media only screen and (orientation: portrait) {
+	#counter-box {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		min-height: 400px;
+	}
+}
+
+@media only screen and (orientation: landscape) {
+	#counter-box {
+		display: flex;
+		flex-direction: row-reverse;
+		justify-content: space-between;
+		align-items: center;
+		min-width: 400px;
+	}
+}
